removing antlr plugin and ajusting javadoc plugin